--- a/package.json
+++ b/package.json
@@ -13,19 +13,18 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/styled-components": "^5.1.7",
+    "next": "^12.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.5.11",
-    "react-scripts": "4.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
